--- a/app/views/project.erb
+++ b/app/views/project.erb
@@ -35,7 +35,7 @@
           <td>
             <a href="<%= campaign.link %>" title="<%= campaign.title %>"><%= campaign.title %> »</a>
           </td>
-          <td class="center"><%= campaign.campaign_hits.count %></td>
+          <td class="center"><%= CampaignHit.all(campaign: campaign).count %></td>
           <td></td>
         </tr>
 
