--- a/app/views/projects.erb
+++ b/app/views/projects.erb
@@ -20,6 +20,7 @@
       <thead>
         <tr>
           <th>Kampagne</th>
+          <th class="center">Verkäufe</th>
           <th class="center">Besucher</th>
         </tr>
       </thead>
@@ -32,6 +33,7 @@
             <td>
               <a href="<%= campaign.link %>" title="<%= campaign.title %>"><%= campaign.title %> »</a>
             </td>
+            <td class="center"><%= Order.all(campaign: campaign).count %></td>
             <td class="center"><%= CampaignHit.all(campaign: campaign).count %></td>
           </tr>
 
