--- a/app/views/campaign.erb
+++ b/app/views/campaign.erb
@@ -35,7 +35,7 @@
           <td><%= order.order_id %></td>
           <td class="center"><%= order.total_formatted %></td>
           <td class="center"><%= order.quantity %></td>
-          <td class="center"><a class="icons" href="<%= order.link %>" title="Order anzeigen">&#x22;</a></td>
+          <td class="center"><!--<a class="icons" href="<%= order.link %>" title="Order anzeigen">&#x22;</a>--></td>
         </tr>
 
       <% end.empty? %>
