--- a/app/views/campaign_form.erb
+++ b/app/views/campaign_form.erb
@@ -38,8 +38,12 @@
             <label class="bold" for="script_template">Script</label>
           </section>
           <textarea id="script_template" class="width-100" name="campaign[script_template]" style="height: 187px"><%= campaign.script_template %></textarea>
-          <span class="descr">Hier das Javascript des Affiliates einfügen.</a>
-
+          <span class="descr">Hier das Javascript des Affiliates einfügen. Folgende Platzhalter stehen zur Verfügung</span>
+          <ul class="descr">
+            <% campaign.order_fields.each do |field| %>
+              <li>&lt%= order.<%= field %> %></li>
+            <% end %>
+          </ul>
         </fieldset>
       </li>
       <li class="form-section"></li>
