Remove cookie when done.

--- a/app/views/track.erb
+++ b/app/views/track.erb
@@ -111,7 +111,7 @@ var _track = _track || [];
         this.getIframe(this.getOrderUrl() + '?' + query.join('&'))
       );
       // remove cookie
-      //this.removeCookie('_monkey');
+      this.removeCookie('_monkey');
     }
   };
 
