--- a/app/views/campaign.erb
+++ b/app/views/campaign.erb
@@ -21,7 +21,8 @@
         <th>Datum</th>
         <th>Order</th>
         <th class="center">Summe</th>
-        <th class="center">Menge</th>
+        <th>Währung</th>
+        <th class="center">Artikel</th>
         <th></th>
       </tr>
     </thead>
@@ -34,8 +35,9 @@
           <td><%= order.created_at_formatted %></td>
           <td><%= order.order_id %></td>
           <td class="center"><%= order.total_formatted %></td>
+          <td><%= order.currency %></td>
           <td class="center"><%= order.quantity %></td>
-          <td class="center"><!--<a class="icons" href="<%= order.link %>" title="Order anzeigen">&#x22;</a>--></td>
+          <td class="center"><a class="icons" href="<%= order.link %>" title="Order anzeigen">&#x22;</a></td>
         </tr>
 
       <% end.empty? %>
