Adding user authentication.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,15 +9,12 @@
 
 <body>
 
-  <section class="container">
-    <header></header>
+  <%= erb :_nav %>
+  <%= erb :_flash %>
 
-    <section class="content"><%= yield %></section>
+  <section class="container"><%= yield %></section>
 
-    <footer></footer>
-  </section>
-
-  <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
   <script src="/js/basics.js"></script>
 
 </body>
