Redirect to the site i wanted to visit.

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -7,6 +7,7 @@
   <% end %>
 
   <form class="forms columnar third centered" action="/login" method="post">
+    <input type="hidden" name="to" value="<%= to %>"/>
     <ul>
       <li>
         <input type="email" name="email" value="<%= email %>" required placeholder="E-Mail"<% if email.empty? %> autofocus="autofocus"<% end %>/>
